# ForthSTM32C

./: #CMakeLists.txt#  .ccls  .clang-tidy  .gitignore  .settings.el  CMakeLists.txt  STM32F103C8T6.ld  compile_commands.json  design.org  update.sh  update_compile_commands.sh  watch_cmakelists.sh
include/forth/: -.i  _words_implementations.h  aux.h  dictionary.h  forth.h  global.h  macros.h  macros_words_implementations.h  o.c  object.h  parse.h  stack.h  tib.h  words.h
include/hal/: bsp.h
src/: #bsp.c#  aux.c  bsp.c  clock.s  dictionary.c  gpioInit.s  interrupts.s  jonesforth.S  main.c  main.s  object.c  parse.c  ss.s  stack.c  startup_stm32f103_gnu.c  systemInit.s  tib.c  words.c
